new page article

--- a/consultation-osteopathie-bruges.html
+++ b/consultation-osteopathie-bruges.html
@@ -56,6 +56,11 @@
       "closes": "19:00"
     }
   ],
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 44.8714,
+    "longitude": -0.5863
+  },
   "medicalSpecialty": "Osteopathic"
 }
 </script>
@@ -92,6 +97,7 @@
             </div>
             <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
             <a class="navbar__link" href="tarifs.html">Tarifs</a>
+<a class="navbar__link" href="articles.html">Articles</a>
           </div>
         </div>
         <a class="btn btn-black" target="_blank" rel="noopener noreferrer"
