--- a/quand-consulter-un-osteopathe-bruges.html
+++ b/quand-consulter-un-osteopathe-bruges.html
@@ -93,6 +93,7 @@
             </div>
             <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
             <a class="navbar__link" href="tarifs.html">Tarifs</a>
+<a class="navbar__link" href="articles.html">Articles</a>
           </div>
         </div>
         <a class="btn btn-black" target="_blank" rel="noopener noreferrer"
