--- a/articles.html
+++ b/articles.html
@@ -8,7 +8,7 @@
       name="description"
       content="Henrique Nunes, ostéopathe à Bruges (33520), vous propose des soins personnalisés pour soulager vos douleurs et améliorer votre bien-être. Consultations en cabinet ou à domicile."
     />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Fonts and Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -158,7 +158,7 @@
       <section class="banner banner-intro">
         <img
           class="banner__img"
-          src="https://media.gettyimages.com/id/1143594169/fr/photo/gpr-global-postural-re-education-ajustement-du-cou.jpg?s=612x612&w=0&k=20&c=jzVDyr-3ZSf9zu08PH0c_MmdcdLxZf9EErH_AW8FfIY="
+          src="./assets/images/articles-banner.jpg"
           loading="lazy"
           alt="séance osteopathie"
         />
@@ -181,87 +181,90 @@
             pratiques pour prendre soin de votre santé au quotidien.
           </p>
         </div>
-        <div class="article-card__container">
-          <article class="article-card__blog-xl">
-            <figure class="article-card__blog__figure">
-              <img
-                class="testphoto-xl"
-                src="https://images.pexels.com/photos/4473626/pexels-photo-4473626.jpeg?auto=compress&cs=tinysrgb&w=800"
-              />
-              <figcaption class="article-card__blog__figure__tag">
-                Sédentarité
-              </figcaption>
-            </figure>
-            <p class="article-card__date">24 Janvier 2025</p>
-
-            <h3 class="article-card__title">
-              Vaincre la sédentarité au quotidien
-            </h3>
-            <p class="article-card__wrapper__text">
-              Vaincre la sédentarité peut paraître simple, et bien ca l’est. Il
-              est connu que pour combattre la sédentarité il faut exercer une
-              activité physique régulière...
-            </p>
-          </article>
-
-          <div class="article-card__container-m">
-            <article class="article-card__blog">
-              <figure
-                class="article-card__blog__figure article-card__blog__figure-m"
-              >
+        <div class="article_cards_container">
+          <div class="article-card__container">
+            <a href="/articles/sedentarite/vaincre-la-sedentarite.html" class="article-card__blog-xl">
+            <article class="">
+              <figure class="article-card__blog__figure">
                 <img
-                  class="testphoto"
-                  src="https://images.pexels.com/photos/5794025/pexels-photo-5794025.jpeg?auto=compress&cs=tinysrgb&w=800"
-                />
-                <figcaption class="article-card__blog__figure__tag">
-                  TMS
-                </figcaption>
-              </figure>
-              <div class="article-card__content">
-                <p class="article-card__date">24 Janvier 2025</p>
-                <h3 class="article-card__title">
-                  Pour vaincre la sédentarité, combattez la gravité !
-                </h3>
-              </div>
-            </article>
-            <article class="article-card__blog">
-              <figure
-                class="article-card__blog__figure article-card__blog__figure-m"
-              >
-                <img
-                  class="testphoto"
-                  src="https://images.pexels.com/photos/7992185/pexels-photo-7992185.jpeg?auto=compress&cs=tinysrgb&w=800"
-                />
-                <figcaption class="article-card__blog__figure__tag">
-                  Prévention
-                </figcaption>
-              </figure>
-              <div class="article-card__content">
-                <p class="article-card__date">24 Janvier 2025</p>
-                <h3 class="article-card__title">
-                  Les douleurs dans le pouce liées au bureau
-                </h3>
-              </div>
-            </article>
-            <article class="article-card__blog">
-              <figure
-                class="article-card__blog__figure article-card__blog__figure-m"
-              >
-                <img
-                  class="testphoto"
+                  class="testphoto-xl"
                   src="https://images.pexels.com/photos/4473626/pexels-photo-4473626.jpeg?auto=compress&cs=tinysrgb&w=800"
                 />
                 <figcaption class="article-card__blog__figure__tag">
                   Sédentarité
                 </figcaption>
               </figure>
-              <div class="article-card__content">
-                <p class="article-card__date">24 Janvier 2025</p>
-                <h3 class="article-card__title">La respiration</h3>
-              </div>
+              <p class="article-card__date">24 Janvier 2025</p>
+
+              <h3 class="article-card__title">
+                Vaincre la sédentarité au quotidien
+              </h3>
+              <p class="article-card__wrapper__text">
+                Vaincre la sédentarité peut paraître simple, et bien ca l’est.
+                Il est connu que pour combattre la sédentarité il faut exercer
+                une activité physique régulière...
+              </p>
             </article>
+            </a>
+
+            <div class="article-card__container-m">
+              <article class="article-card__blog">
+                <figure
+                  class="article-card__blog__figure article-card__blog__figure-m"
+                >
+                  <img
+                    class="testphoto"
+                    src="https://images.pexels.com/photos/5794025/pexels-photo-5794025.jpeg?auto=compress&cs=tinysrgb&w=800"
+                  />
+                  <figcaption class="article-card__blog__figure__tag">
+                    TMS
+                  </figcaption>
+                </figure>
+                <div class="article-card__content">
+                  <p class="article-card__date">24 Janvier 2025</p>
+                  <h3 class="article-card__title">
+                    Pour vaincre la sédentarité, combattez la gravité !
+                  </h3>
+                </div>
+              </article>
+              <article class="article-card__blog">
+                <figure
+                  class="article-card__blog__figure article-card__blog__figure-m"
+                >
+                  <img
+                    class="testphoto"
+                    src="https://images.pexels.com/photos/7992185/pexels-photo-7992185.jpeg?auto=compress&cs=tinysrgb&w=800"
+                  />
+                  <figcaption class="article-card__blog__figure__tag">
+                    Prévention
+                  </figcaption>
+                </figure>
+                <div class="article-card__content">
+                  <p class="article-card__date">24 Janvier 2025</p>
+                  <h3 class="article-card__title">
+                    Les douleurs dans le pouce liées au bureau
+                  </h3>
+                </div>
+              </article>
+              <article class="article-card__blog">
+                <figure
+                  class="article-card__blog__figure article-card__blog__figure-m"
+                >
+                  <img
+                    class="testphoto"
+                    src="https://images.pexels.com/photos/4473626/pexels-photo-4473626.jpeg?auto=compress&cs=tinysrgb&w=800"
+                  />
+                  <figcaption class="article-card__blog__figure__tag">
+                    Sédentarité
+                  </figcaption>
+                </figure>
+                <div class="article-card__content">
+                  <p class="article-card__date">24 Janvier 2025</p>
+                  <h3 class="article-card__title">La respiration</h3>
+                </div>
+              </article>
+            </div>
           </div>
-        </div>
         <!-- <div class="article-card__blog__last">
           <article class="article-card__blog-xl article-card__blog-last">
             <figure class="article-card__blog__figure">
@@ -355,7 +358,7 @@
                         Sédentarité
                       </figcaption>
                     </figure>
-                    <p class="article-card__date">24 Janvier 2025</p>
+                    <p class="article-card__date">24 Janvier 202111</p>
                     <h3 class="article-card__title">
                       Vaincre la sédentarité au quotidien
                     </h3>
@@ -509,6 +512,7 @@
           </div>
         </div>
       </div>
+    </div>
 
       <section class="banner">
         <img
