--- a/tarifs.html
+++ b/tarifs.html
@@ -148,7 +148,7 @@
         </div>
       </nav>
     </header>
-    <main id="up" class="main">
+    <main data-aos="fade-in" id="up" class="main">
       <a href="#up" class="icon__wrapper">
         <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche" />
       </a>
