--- a/consultation-osteopathie-bruges.html
+++ b/consultation-osteopathie-bruges.html
@@ -105,7 +105,7 @@
           en ligne</a>
         <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"
             loading="lazy"></button>
-        <button class="menu-close show"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"
+        <button class="menu-close hidden"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"
             loading="lazy"></button>
       </div>
     </nav>
