--- a/osteopathie.html
+++ b/osteopathie.html
@@ -137,7 +137,7 @@
               loading="lazy"
             />
           </button>
-          <button class="menu-close show">
+          <button class="menu-close hidden">
             <img
               class="menu__img"
               src="./assets/images/close.svg"
