--- a/articles.html
+++ b/articles.html
@@ -146,7 +146,7 @@
               loading="lazy"
             />
           </button>
-          <button class="menu-close show">
+          <button class="menu-close hidden">
             <img
               class="menu__img"
               src="./assets/images/close.svg"
@@ -170,7 +170,7 @@
         />
         <div class="banner__wrapper banner__wrapper--intro">
           <h1 class="banner__title banner__title--intro">
-            Articles sur l’Ostéopathie et le Bien-être
+            L’ostéopathie et le Bien-être
           </h1>
         </div>
       </section>
@@ -197,7 +197,7 @@
                 <figure class="article-card__blog__figure">
                   <img
                     class="testphoto-xl"
-                    src="https://images.pexels.com/photos/4473626/pexels-photo-4473626.jpeg?auto=compress&cs=tinysrgb&w=800"
+                    src="https://images.unsplash.com/photo-1595670322505-4de61b9cdf47?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Z29vZCUyMGxpZmV8ZW58MHx8MHx8fDA%3D"
                   />
                   <figcaption class="article-card__blog__figure__tag">
                     Sédentarité
@@ -217,44 +217,54 @@
             </a>
 
             <div class="article-card__container-m">
-              <article class="article-card__blog">
-                <figure
-                  class="article-card__blog__figure article-card__blog__figure-m"
-                >
-                  <img
-                    class="testphoto"
-                    src="https://images.pexels.com/photos/5794025/pexels-photo-5794025.jpeg?auto=compress&cs=tinysrgb&w=800"
-                  />
-                  <figcaption class="article-card__blog__figure__tag">
-                    TMS
-                  </figcaption>
-                </figure>
-                <div class="article-card__content">
-                  <p class="article-card__date">24 Janvier 2025</p>
-                  <h3 class="article-card__title">
-                    Pour vaincre la sédentarité, combattez la gravité !
-                  </h3>
-                </div>
-              </article>
-              <article class="article-card__blog">
-                <figure
-                  class="article-card__blog__figure article-card__blog__figure-m"
-                >
-                  <img
-                    class="testphoto"
-                    src="https://images.pexels.com/photos/7992185/pexels-photo-7992185.jpeg?auto=compress&cs=tinysrgb&w=800"
-                  />
-                  <figcaption class="article-card__blog__figure__tag">
-                    Prévention
-                  </figcaption>
-                </figure>
-                <div class="article-card__content">
-                  <p class="article-card__date">24 Janvier 2025</p>
-                  <h3 class="article-card__title">
-                    Les douleurs dans le pouce liées au bureau
-                  </h3>
-                </div>
-              </article>
+              <a
+                href="/articles/troubles-musculosquelettiques/le-teletravail.html"
+                class="article-card__blog-xl"
+              >
+                <article class="article-card__blog">
+                  <figure
+                    class="article-card__blog__figure article-card__blog__figure-m"
+                  >
+                    <img
+                      class="testphoto"
+                      src="https://images.unsplash.com/photo-1637580687569-422719b35f7f?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8dGVsZXdvcmtpbmd8ZW58MHx8MHx8fDA%3D"
+                    />
+                    <figcaption class="article-card__blog__figure__tag">
+                      TMS
+                    </figcaption>
+                  </figure>
+                  <div class="article-card__content">
+                    <p class="article-card__date">24 Janvier 2025</p>
+                    <h3 class="article-card__title">
+                      Télétravail : prévenir et soulager
+                    </h3>
+                  </div>
+                </article>
+              </a>
+              <a
+                href="/articles/troubles-musculosquelettiques/alimentation.html"
+                class="article-card__blog-xl"
+              >
+                <article class="article-card__blog">
+                  <figure
+                    class="article-card__blog__figure article-card__blog__figure-m"
+                  >
+                    <img
+                      class="testphoto"
+                      src="https://plus.unsplash.com/premium_photo-1664640733983-fd9fbfff25bf?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8YWxpbWVudGF0aW9ufGVufDB8fDB8fHww"
+                    />
+                    <figcaption class="article-card__blog__figure__tag">
+                      TMS
+                    </figcaption>
+                  </figure>
+                  <div class="article-card__content">
+                    <p class="article-card__date">24 Janvier 2025</p>
+                    <h3 class="article-card__title">
+                      Des repas sains pour des muscles en pleine forme
+                    </h3>
+                  </div>
+                </article>
+              </a>
               <article class="article-card__blog">
                 <figure
                   class="article-card__blog__figure article-card__blog__figure-m"
@@ -274,63 +284,8 @@
               </article>
             </div>
           </div>
-          <!-- <div class="article-card__blog__last">
-          <article class="article-card__blog-xl article-card__blog-last">
-            <figure class="article-card__blog__figure">
-              <img
-                class="testphoto-xl testphoto-last"
-                src="https://images.unsplash.com/photo-1501869150797-9bbb64f782fd?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHBoeXNpb3RoZXJhcHl8ZW58MHx8MHx8fDA%3D"
-              />
-              <figcaption class="article-card__blog__figure__tag">
-                Sédentarité
-              </figcaption>
-            </figure>
-            <p class="article-card__date">24 Janvier 2025</p>
-            <h3 class="article-card__title">
-              Vaincre la sédentarité au quotidien
-            </h3>
-            <p class="article-card__wrapper__text">
-              Vaincre la sédentarité peut paraître simple, et bien ca l’est...
-            </p>
-          </article>
-          <article class="article-card__blog-xl article-card__blog-last">
-            <figure class="article-card__blog__figure">
-              <img
-                class="testphoto-xl testphoto-last"
-                src="https://images.unsplash.com/photo-1501869150797-9bbb64f782fd?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHBoeXNpb3RoZXJhcHl8ZW58MHx8MHx8fDA%3D"
-              />
-              <figcaption class="article-card__blog__figure__tag">
-                Sédentarité
-              </figcaption>
-            </figure>
-            <p class="article-card__date">24 Janvier 2025</p>
-            <h3 class="article-card__title">
-              Vaincre la sédentarité au quotidien
-            </h3>
-            <p class="article-card__wrapper__text">
-              Vaincre la sédentarité peut paraître simple, et bien ca l’est...
-            </p>
-          </article>
-          <article class="article-card__blog-xl article-card__blog-last">
-            <figure class="article-card__blog__figure">
-              <img
-                class="testphoto-xl testphoto-last"
-                src="https://images.pexels.com/photos/1028741/pexels-photo-1028741.jpeg?auto=compress&cs=tinysrgb&w=800"
-              />
-              <figcaption class="article-card__blog__figure__tag">
-                Sédentarité
-              </figcaption>
-            </figure>
-            <p class="article-card__date">24 Janvier 2025</p>
-            <h3 class="article-card__title">
-              Vaincre la sédentarité au quotidien
-            </h3>
-            <p class="article-card__wrapper__text">
-              Vaincre la sédentarité peut paraître simple, et bien ca l’est...
-            </p>
-          </article>
-        </div> -->
-          <div class="article-card__blog-glide">
+
+          <!-- <div class="article-card__blog-glide">
             <h2 class="article-card__wrapper__title">Sédentarité</h2>
             <div class="glide glide-1">
               <div class="glide__track" data-glide-el="track">
@@ -375,7 +330,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Flèches -->
               <div class="glide__arrows" data-glide-el="controls">
                 <button
                   class="glide__arrow glide__arrow--left"
@@ -391,9 +345,9 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="article-card__blog-glide">
+          <!-- <div class="article-card__blog-glide">
             <h2 class="article-card__wrapper__title">Prévention</h2>
             <div class="glide glide-2">
               <div class="glide__track" data-glide-el="track">
@@ -438,7 +392,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Flèches -->
               <div class="glide__arrows" data-glide-el="controls">
                 <button
                   class="glide__arrow glide__arrow--left"
@@ -454,9 +407,9 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="article-card__blog-glide">
+          <!-- <div class="article-card__blog-glide">
             <h2 class="article-card__wrapper__title">
               Troubles Musculosquelettiques
             </h2>
@@ -503,7 +456,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- Flèches -->
               <div class="glide__arrows" data-glide-el="controls">
                 <button
                   class="glide__arrow glide__arrow--left"
@@ -519,7 +471,7 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
