--- a/articles.html
+++ b/articles.html
@@ -198,7 +198,7 @@
                   <img
                     class="article_photo-xl"
                     src="./assets/images/articles/lifeisgood.jpeg"
-                    alt="Photo bouger librement, se sentir mieux"
+                    alt="bouger librement, se sentir mieux"
                   />
                   <figcaption class="article-card__blog__figure__tag">
                     Sédentarité
@@ -294,29 +294,32 @@
             </div>
           </div>
 
-          <!-- <div class="article-card__blog-glide">
+          <div class="article-card__blog-glide">
             <h2 class="article-card__wrapper__title">Sédentarité</h2>
             <div class="glide glide-1">
               <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
                   <li class="glide__slide">
+                    <a href="/articles/sedentarite/améliorer-posture-bien-être-sédentarité.html">
                     <article
                       class="article-card__blog-xl article-card__blog-last article-card__glide"
                     >
                       <figure class="article-card__blog__figure">
                         <img
                           class="article_photo-xl article_photo-last"
-                          src="https://images.pexels.com/photos/1028741/pexels-photo-1028741.jpeg?auto=compress&cs=tinysrgb&w=800"
+                          src="./assets/images/articles/posture.jpg"
+                          alt="Améliorer votre posture pour un bien-être quotidien"
                         />
                         <figcaption class="article-card__blog__figure__tag">
                           Sédentarité
                         </figcaption>
                       </figure>
-                      <p class="article-card__date">24 Janvier 2025</p>
+                      <p class="article-card__date">07 Avril 2025</p>
                       <h3 class="article-card__title">
-                        Vaincre la sédentarité au quotidien
+                        Améliorer votre posture pour un bien-être quotidien
                       </h3>
                     </article>
+                    </a>
                   </li>
                   <li class="glide__slide">
                     <article
@@ -325,7 +328,8 @@
                       <figure class="article-card__blog__figure">
                         <img
                           class="article_photo-xl article_photo-last"
-                          src="https://images.pexels.com/photos/1028741/pexels-photo-1028741.jpeg?auto=compress&cs=tinysrgb&w=800"
+                          src="./assets/images/articles/lifeisgood.jpeg"
+                          alt="Bouger librement, se sentir mieux"
                         />
                         <figcaption class="article-card__blog__figure__tag">
                           Sédentarité
@@ -333,7 +337,7 @@
                       </figure>
                       <p class="article-card__date">24 Janvier 202111</p>
                       <h3 class="article-card__title">
-                        Vaincre la sédentarité au quotidien
+                        Bouger librement, se sentir mieux
                       </h3>
                     </article>
                   </li>
@@ -354,7 +358,7 @@
                 </button>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <!-- <div class="article-card__blog-glide">
             <h2 class="article-card__wrapper__title">Prévention</h2>
