add article prod

--- a/articles.html
+++ b/articles.html
@@ -196,7 +196,7 @@
             <a href="/articles/prevention/arthrose.html" class="article-card__blog-xl">
               <article class="article-card__blog">
                 <figure class="article-card__blog__figure article-card__blog__figure-m">
-                  <img class="article_photo" src="./assets/images/articles/genou.jpeg" alt="douleur arthrose" />
+                  <img class="article_photo" src="./assets/images/articles/Arthritis.jpg" alt="douleur arthrose" />
                   <figcaption class="article-card__blog__figure__tag">
                     Prévention
                   </figcaption>
@@ -219,7 +219,7 @@
                   <a href="/articles/sedentarite/améliorer-posture-bien-être-sédentarité.html">
                     <article class="article-card__blog-xl article-card__blog-last article-card__glide">
                       <figure class="article-card__blog__figure">
-                        <img class="article_photo-xl article_photo-last" src="./assets/images/articles/posture.jpg"
+                        <img class="article_photo-xl article_photo-last" src="./assets/images/articles/posture.webp"
                           alt="Améliorer votre posture pour un bien-être quotidien" />
                         <figcaption class="article-card__blog__figure__tag">
                           Sédentarité
@@ -241,7 +241,7 @@
                         Sédentarité
                       </figcaption>
                     </figure>
-                    <p class="article-card__date">24 Janvier 202111</p>
+                    <p class="article-card__date">02 Février 2025</p>
                     <h3 class="article-card__title">
                       Bouger librement, se sentir mieux
                     </h3>
@@ -269,13 +269,13 @@
                   <a href="/articles/prevention/arthrose.html">
                     <article class="article-card__blog-xl article-card__blog-last article-card__glide">
                       <figure class="article-card__blog__figure">
-                        <img class="article_photo-xl article_photo-last" src="./assets/images/articles/genou.jpeg"
+                        <img class="article_photo-xl article_photo-last" src="./assets/images/articles/Arthritis.jpg"
                           alt="L'arthrose" />
                         <figcaption class="article-card__blog__figure__tag">
                           Prévention
                         </figcaption>
                       </figure>
-                      <p class="article-card__date">04 Avril 2025</p>
+                      <p class="article-card__date">04 Février 2025</p>
                       <h3 class="article-card__title">
                         L'arthrose
                       </h3>
@@ -291,7 +291,7 @@
                         Prévention
                       </figcaption>
                     </figure>
-                    <p class="article-card__date">24 Janvier 2025</p>
+                    <p class="article-card__date">04 Avril 2025</p>
                     <h3 class="article-card__title">
                      Les souris ergonomiques : un vrai changement pour votre confort !
                     </h3>
