add article prod

--- a/articles.html
+++ b/articles.html
@@ -233,6 +233,7 @@
                   </a>
                 </li>
                 <li class="glide__slide">
+                  <a href="/articles/sedentarite/bouger-librement-se-sentir-mieux.html">
                   <article class="article-card__blog-xl article-card__blog-last article-card__glide">
                     <figure class="article-card__blog__figure">
                       <img class="article_photo-xl article_photo-last" src="./assets/images/articles/lifeisgood.jpeg"
@@ -246,6 +247,7 @@
                       Bouger librement, se sentir mieux
                     </h3>
                   </article>
+                  </a>
                 </li>
               </ul>
             </div>
