--- a/articles.html
+++ b/articles.html
@@ -190,36 +190,35 @@
         <div class="article_cards_container">
           <div class="article-card__container">
             <a
-              href="/articles/sedentarite/bouger-librement-se-sentir-mieux.html"
+              href="/articles/sedentarite/activite-physique-surpoids.html"
               class="article-card__blog-xl"
             >
               <article class="">
                 <figure class="article-card__blog__figure">
                   <img
                     class="article_photo-xl"
-                    src="./assets/images/articles/lifeisgood.jpeg"
-                    alt="bouger librement, se sentir mieux"
+                    src="./assets/images/articles/activite-physique.jpg"
+                    alt="Surpoids et activité physique"
                   />
                   <figcaption class="article-card__blog__figure__tag">
                     Sédentarité
                   </figcaption>
                 </figure>
-                <p class="article-card__date">24 Janvier 2025</p>
+                <p class="article-card__date">16 Mai 2025</p>
 
                 <h3 class="article-card__title">
-                  Bouger librement, se sentir mieux
+                  Surpoids et activité physique : prévenir pour mieux vivre
                 </h3>
                 <p class="article-card__wrapper__text">
-                  Vaincre la sédentarité peut paraître simple, et bien ca l’est.
-                  Il est connu que pour combattre la sédentarité il faut exercer
-                  une activité physique régulière...
+                  Comprendre le lien entre surpoids et sédentarité pour mieux
+                  gérer sa santé grâce à l’activité physique régulière.
                 </p>
               </article>
             </a>
 
             <div class="article-card__container-m">
               <a
-                href="/articles/troubles-musculosquelettiques/le-teletravail.html"
+                href="./articles/troubles-musculosquelettiques/soulager-hernie-discale-osteopathe.html"
                 class="article-card__blog-xl"
               >
                 <article class="article-card__blog">
@@ -228,23 +227,24 @@
                   >
                     <img
                       class="article_photo"
-                      src="./assets/images/articles/teletravail.jpeg"
-                      alt="posture Télétravail"
+                      src="./assets/images/articles/hernie-discale.jpg"
+                      alt="Soulager hernie discale"
                     />
                     <figcaption class="article-card__blog__figure__tag">
                       TMS
                     </figcaption>
                   </figure>
                   <div class="article-card__content">
-                    <p class="article-card__date">02 Février 2025</p>
+                    <p class="article-card__date">16 Mai 2025</p>
                     <h3 class="article-card__title">
-                      Télétravail : prévenir et soulager
+                      Hernie discale : soulager et prévenir avec l’ostéopathie
                     </h3>
                   </div>
                 </article>
               </a>
+
               <a
-                href="/articles/troubles-musculosquelettiques/alimentation.html"
+                href="/articles/prevention/souris-ergonomique-osteopathie-bruges.html"
                 class="article-card__blog-xl"
               >
                 <article class="article-card__blog">
@@ -253,41 +253,42 @@
                   >
                     <img
                       class="article_photo"
-                      src="./assets/images/articles/dinner.jpeg"
-                      alt="repars sains"
-                    />
-                    <figcaption class="article-card__blog__figure__tag">
-                      TMS
-                    </figcaption>
-                  </figure>
-                  <div class="article-card__content">
-                    <p class="article-card__date">04 Février 2025</p>
-                    <h3 class="article-card__title">
-                      Des repas sains pour des muscles en pleine forme
-                    </h3>
-                  </div>
-                </article>
-              </a>
-              <a
-                href="/articles/prevention/arthrose.html"
-                class="article-card__blog-xl"
-              >
-                <article class="article-card__blog">
-                  <figure
-                    class="article-card__blog__figure article-card__blog__figure-m"
-                  >
-                    <img
-                      class="article_photo"
-                      src="./assets/images/articles/Arthritis.jpg"
-                      alt="douleur arthrose"
+                      src="./assets/images/articles/souris.jpg"
+                      alt="Souris ergonomique"
                     />
                     <figcaption class="article-card__blog__figure__tag">
                       Prévention
                     </figcaption>
                   </figure>
                   <div class="article-card__content">
-                    <p class="article-card__date">04 Février 2025</p>
-                    <h3 class="article-card__title">L'arthrose</h3>
+                    <p class="article-card__date">04 Avril 2025</p>
+                    <h3 class="article-card__title">Les souris ergonomiques</h3>
+                  </div>
+                </article>
+              </a>
+
+              <a
+                href="./articles/troubles-musculosquelettiques/lumbago.html"
+                class="article-card__blog-xl"
+              >
+                <article class="article-card__blog">
+                  <figure
+                    class="article-card__blog__figure article-card__blog__figure-m"
+                  >
+                    <img
+                      class="article_photo"
+                      src="./assets/images/articles/lumbago.jpg"
+                      alt="Lumbago : Soulager vos Douleurs Lombaires Naturellement"
+                    />
+                    <figcaption class="article-card__blog__figure__tag">
+                      TMS
+                    </figcaption>
+                  </figure>
+                  <div class="article-card__content">
+                    <p class="article-card__date">07 Avril 2025</p>
+                    <h3 class="article-card__title">
+                      Lumbago : Soulager vos Douleurs
+                    </h3>
                   </div>
                 </article>
               </a>
@@ -397,6 +398,31 @@
             <div class="glide glide-2">
               <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
+                  <li class="glide__slide">
+                    <a
+                      href="/articles/prevention/bruit-sante-travail-osteopathie.html"
+                    >
+                      <article
+                        class="article-card__blog-xl article-card__blog-last article-card__glide"
+                      >
+                        <figure class="article-card__blog__figure">
+                          <img
+                            class="article_photo-xl article_photo-last"
+                            src="./assets/images/articles/bruits-sante.jpg"
+                            alt="Lutter contre le bruit : un enjeu de santé"
+                          />
+                          <figcaption class="article-card__blog__figure__tag">
+                            Prévention
+                          </figcaption>
+                        </figure>
+                        <p class="article-card__date">16 Mai 2025</p>
+                        <h3 class="article-card__title">
+                          Lutter contre le bruit
+                        </h3>
+                      </article>
+                    </a>
+                  </li>
+
                   <li class="glide__slide">
                     <a href="/articles/prevention/arthrose.html">
                       <article
