--- a/articles.html
+++ b/articles.html
@@ -399,6 +399,29 @@
               <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
                   <li class="glide__slide">
+                    <a href="/articles/prevention/hydratation-osteopathie.html">
+                      <article
+                        class="article-card__blog-xl article-card__blog-last article-card__glide"
+                      >
+                        <figure class="article-card__blog__figure">
+                          <img
+                            class="article_photo-xl article_photo-last"
+                            src="./assets/images/articles/hydratation.jpg"
+                            alt="Hydratation et bien-être en ostéopathie"
+                          />
+                          <figcaption class="article-card__blog__figure__tag">
+                            Prévention
+                          </figcaption>
+                        </figure>
+                        <p class="article-card__date">20 Juin 2025</p>
+                        <h3 class="article-card__title">
+                          Hydratation et bien-être
+                        </h3>
+                      </article>
+                    </a>
+                  </li>
+
+                  <li class="glide__slide">
                     <a
                       href="/articles/prevention/bruit-sante-travail-osteopathie.html"
                     >
@@ -493,6 +516,31 @@
             <div class="glide glide-3">
               <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
+                  <li class="glide__slide">
+                    <a
+                      href="/articles/troubles-musculosquelettiques/correction-visuelle-osteopathie.html"
+                    >
+                      <article
+                        class="article-card__blog-xl article-card__blog-last article-card__glide"
+                      >
+                        <figure class="article-card__blog__figure">
+                          <img
+                            class="article_photo-xl article_photo-last"
+                            src="./assets/images/articles/vue-correction.jpg"
+                            alt="Correction visuelle et posture"
+                          />
+                          <figcaption class="article-card__blog__figure__tag">
+                            TMS
+                          </figcaption>
+                        </figure>
+                        <p class="article-card__date">20 Juin 2025</p>
+                        <h3 class="article-card__title">
+                          L'intérêt d'une bonne correction visuelle
+                        </h3>
+                      </article>
+                    </a>
+                  </li>
+
                   <li class="glide__slide">
                     <a
                       href="./articles/troubles-musculosquelettiques/soulager-hernie-discale-osteopathe.html"
