--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                 </div>
               </div>
               <a class="navbar__link" href="osteopathe-bruges.html"
+                >Suivi sportif</a
+              >
+              <a class="navbar__link" href="osteopathe-bruges.html"
                 >Votre ostéopathe</a
               >
               <a class="navbar__link" href="tarifs.html">Tarifs</a>
