--- a/index.html
+++ b/index.html
@@ -77,17 +77,18 @@
               <a class="navbar__link" href="/">Accueil</a>
               <a
                 class="navbar__link navbar__link__mobile"
-                href="osteopathie.html"
+                href="/osteopathie.html"
                 >Ostéopathie</a
               >
+
               <a
                 class="navbar__link navbar__link__mobile"
-                href="consultation-osteopathie-bruges.html"
+                href="/consultation-osteopathie-bruges.html"
                 >Consultation</a
               >
               <a
                 class="navbar__link navbar__link__mobile"
-                href="quand-consulter-un-osteopathe-bruges.html"
+                href="/quand-consulter-un-osteopathe-bruges.html"
                 >Quand consulter ?</a
               >
               <div class="dropdown">
@@ -96,30 +97,30 @@
                   <div class="dropdown-content__wrapper">
                     <a
                       class="dropdown-content__wrapper__link"
-                      href="osteopathie.html"
+                      href="/osteopathie.html"
                       >Définition</a
                     >
                     <a
                       class="dropdown-content__wrapper__link"
-                      href="consultation-osteopathie-bruges.html"
+                      href="/consultation-osteopathie-bruges.html"
                       >Consultation</a
                     >
                     <a
                       class="dropdown-content__wrapper__link"
-                      href="quand-consulter-un-osteopathe-bruges.html"
+                      href="/quand-consulter-un-osteopathe-bruges.html"
                       >Quand consulter ?</a
                     >
                   </div>
                 </div>
               </div>
-              <a class="navbar__link" href="osteopathe-bruges.html"
-                >Suivi sportif</a
+              <a class="navbar__link" href="/preparation-sportif.html"
+                >Préparation physique</a
               >
-              <a class="navbar__link" href="osteopathe-bruges.html"
+              <a class="navbar__link" href="/osteopathe-bruges.html"
                 >Votre ostéopathe</a
               >
-              <a class="navbar__link" href="tarifs.html">Tarifs</a>
-              <a class="navbar__link" href="articles.html">Articles</a>
+              <a class="navbar__link" href="/tarifs.html">Tarifs</a>
+              <a class="navbar__link" href="/articles.html">Articles</a>
             </div>
           </div>
           <a
@@ -133,7 +134,7 @@
           <button class="menu">
             <img
               class="menu__img"
-              src="./assets/images/menu.svg"
+              src="../../assets/images/menu.svg"
               alt="Icone Menu"
               loading="lazy"
             />
@@ -141,7 +142,7 @@
           <button class="menu-close hidden">
             <img
               class="menu__img"
-              src="./assets/images/close.svg"
+              src="../../assets/images/close.svg"
               alt="Icone Menu"
               loading="lazy"
             />
