--- a/quand-consulter-un-osteopathe-bruges.html
+++ b/quand-consulter-un-osteopathe-bruges.html
@@ -64,48 +64,92 @@
 <body>
 
   <header class="header">
-    <nav class="navbar mw-container">
-      <div class="header__wrapper">
-        <a href="/">
-          <span class="header__name">Henrique Nunes</span>
-          <span class="header__wrapper__job">Ostéopathe à Bruges</span>
-        </a>
-      </div>
-      <div class="navbar__container">
-        <div class="navbar__wrapper">
-          <div class="navbar__menu">
-            <a class="navbar__link" href="/">Accueil</a>
-            <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
-            <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
-            <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
-              consulter ?</a>
-            <div class="dropdown">
-              <span class="navbar__link">Ostéopathie</span>
-              <div class="dropdown-content">
-                <div class="dropdown-content__wrapper">
-                  <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-                  <a class="dropdown-content__wrapper__link"
-                    href="consultation-osteopathie-bruges.html">Consultation</a>
-                  <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
-                    consulter ?</a>
+      <nav class="navbar mw-container">
+        <div class="header__wrapper">
+          <a href="/">
+            <span class="header__name">Henrique Nunes</span>
+            <span class="header__wrapper__job">Ostéopathe à Bruges</span>
+          </a>
+        </div>
+        <div class="navbar__container">
+          <div class="navbar__wrapper">
+            <div class="navbar__menu">
+              <a class="navbar__link" href="/">Accueil</a>
+              <a
+                class="navbar__link navbar__link__mobile"
+                href="/osteopathie.html"
+                >Ostéopathie</a
+              >
+
+              <a
+                class="navbar__link navbar__link__mobile"
+                href="/consultation-osteopathie-bruges.html"
+                >Consultation</a
+              >
+              <a
+                class="navbar__link navbar__link__mobile"
+                href="/quand-consulter-un-osteopathe-bruges.html"
+                >Quand consulter ?</a
+              >
+              <div class="dropdown">
+                <span class="navbar__link">Ostéopathie</span>
+                <div class="dropdown-content">
+                  <div class="dropdown-content__wrapper">
+                    <a
+                      class="dropdown-content__wrapper__link"
+                      href="/osteopathie.html"
+                      >Définition</a
+                    >
+                    <a
+                      class="dropdown-content__wrapper__link"
+                      href="/consultation-osteopathie-bruges.html"
+                      >Consultation</a
+                    >
+                    <a
+                      class="dropdown-content__wrapper__link"
+                      href="/quand-consulter-un-osteopathe-bruges.html"
+                      >Quand consulter ?</a
+                    >
+                  </div>
                 </div>
               </div>
+              <a class="navbar__link" href="/preparation-sportif.html"
+                >Préparation physique</a
+              >
+              <a class="navbar__link" href="/osteopathe-bruges.html"
+                >Votre ostéopathe</a
+              >
+              <a class="navbar__link" href="/tarifs.html">Tarifs</a>
+              <a class="navbar__link" href="/articles.html">Articles</a>
             </div>
-            <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
-            <a class="navbar__link" href="tarifs.html">Tarifs</a>
-<a class="navbar__link" href="articles.html">Articles</a>
           </div>
+          <a
+            class="btn btn-black"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+            aria-label="Prendre rendez-vous en ligne"
+            >Rdv en ligne</a
+          >
+          <button class="menu">
+            <img
+              class="menu__img"
+              src="../../assets/images/menu.svg"
+              alt="Icone Menu"
+              loading="lazy"
+            />
+          </button>
+          <button class="menu-close hidden">
+            <img
+              class="menu__img"
+              src="../../assets/images/close.svg"
+              alt="Icone Menu"
+              loading="lazy"
+            />
+          </button>
         </div>
-        <a class="btn btn-black" target="_blank" rel="noopener noreferrer"
-          href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Rdv
-          en ligne</a>
-        <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"
-            loading="lazy"></button>
-        <button class="menu-close hidden"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"
-            loading="lazy"></button>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
   <main data-aos="fade-in" id="up" class="main">
     <a href="#up" class="icon__wrapper">
       <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
