--- a/preparation-sportif.html
+++ b/preparation-sportif.html
@@ -161,269 +161,163 @@
         <img
           class="banner__img"
           loading="lazy"
-          src="./assets/images/bannerTeam.webp"
+          src="./assets/images/banner_prepa.jpg"
           alt="séance ostéopathie"
         />
         <div class="banner__wrapper banner__wrapper--intro">
-          <h1 class="banner__title banner__title--intro">Votre Ostéopathe</h1>
+          <h1 class="banner__title banner__title--intro">
+            Préparation Physique
+          </h1>
         </div>
       </section>
 
-      <div data-aos="fade-in" class="mw-container article">
-        <div class="article__container">
-          <div>
-            <article class="article__wrapper">
-              <h2 class="article__wrapper__title">A Propos de Moi</h2>
-              <p class="article__wrapper__text">
-                Je suis <strong>Henrique Nunes</strong>, ostéopathe avec plus de
-                <strong>15 ans d’expérience</strong>. Mon parcours est riche et
-                diversifié, dédié à l'amélioration du
-                <strong>bien-être</strong> de mes patients. Mon approche est
-                centrée sur le <strong>soulagement des douleurs</strong>,
-                l’<strong>amélioration de la mobilité</strong> et la
-                <strong>prévention des troubles musculo-squelettiques</strong>,
-                grâce à des
-                <strong>techniques ostéopathiques adaptées</strong> à chaque
-                individu.
-              </p>
-            </article>
-
-            <article class="article__wrapper">
-              <h2 class="article__wrapper__title">Parcours Professionnel</h2>
-              <p class="article__wrapper__text">
-                Diplômé en <strong>ostéopathie</strong>, j'ai acquis plus de
-                <strong>15 ans d'expérience</strong> en travaillant avec divers
-                publics, y compris des <strong>athlètes de haut niveau</strong>,
-                des <strong>enfants</strong>, des <strong>adultes</strong> et
-                des <strong>seniors</strong>. J’ai également travaillé avec
-                divers <strong>clubs sportifs de haut niveau</strong> (<a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://tremblayhandball.com/"
-                  >Tremblay-en-France Handball</a
-                >,
-                <a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://www.facebook.com/p/Marne-La-Vall%C3%A9e-Basket-Val-Maubu%C3%A9e-61553830123844/?locale=fr_FR"
-                  >MLV Basket</a
-                >,
-                <a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://torcyfoot.footeo.com/"
-                  >Torcy Football</a
-                >,
-                <a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://www.insep.fr/fr"
-                  >INSEP</a
-                >,
-                <a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://www.jsa-bmb.fr/"
-                  >JSA Bordeaux</a
-                >,
-                <a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://www.cdhn.fr/"
-                  >CDHN</a
-                >) et assuré des consultations en <strong>cabinet</strong> ainsi
-                qu’à <strong>domicile</strong>. Mon parcours inclut aussi de la
-                formation en <strong>entreprise</strong> sur la
-                <strong>prévention des troubles</strong> liés à l'inactivité
-                physique avec
-                <a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://www.atid-consulting.com/"
-                  >Atid Consulting</a
-                >, enrichissant ainsi mon approche clinique.
-              </p>
-              <p class="article__wrapper__text">
-                En tant qu'enseignant chez
-                <a
-                  class="link-ext"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://www.eurosteo.com/"
-                  >Eurosteo</a
-                >
-                (École d'ostéopathie pour professionnels de santé), je suis
-                l'évolution et l'actualité en
-                <strong>traumatologie du sport</strong> et en
-                <strong>prévention des blessures</strong>.
-              </p>
-            </article>
-          </div>
-          <img
-            data-aos="fade-left"
-            class="article__wrapper__img article__wrapper__img--osteo"
-            loading="lazy"
-            src="./assets/images/osteo1.webp"
-            alt="ostéopathe Henrique Nunes"
-          />
-        </div>
-
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">Mes Compétences</h2>
-          <p class="article__wrapper__text">
-            Je mets à votre disposition une large gamme de
-            <strong>compétences</strong> :
-          </p>
-          <ul class="article__wrapper__list">
-            <li>
-              <strong>Traitement des douleurs chroniques et aiguës</strong> :
-              dos, articulations, migraines, troubles digestifs, etc.
-            </li>
-            <li>
-              <strong>Suivi des sportifs</strong> : prévention des blessures,
-              amélioration des performances, récupération rapide.
-            </li>
-            <li>
-              <strong
-                >Accompagnement des femmes enceintes et des nourrissons</strong
-              >
-              : suivi de la grossesse, post-partum, coliques du nourrisson.
-            </li>
-            <li>
-              <strong>Gestion du stress et des tensions</strong> : techniques de
-              relaxation et d’équilibrage du système nerveux.
-            </li>
-          </ul>
-        </article>
-
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">
-            Expertise en Sport et Préparation Physique
+      <section class="osteo sect-mb">
+        <article class="osteo__intro">
+          <h2 class="osteo__intro__title">
+            Préparation Physique : Santé, Performance, Bien-être
           </h2>
-          <p class="article__wrapper__text">
-            En tant qu'<strong>ostéopathe du sport</strong> et
-            <strong>préparateur physique</strong>, j'accompagne les
-            <strong>athlètes</strong> et les patients en quête de
-            <strong>bien-être physique</strong>.
+          <p class="osteo__intro__desc">
+            Que vous souhaitiez retrouver la forme, améliorer vos performances
+            ou simplement prendre soin de votre santé, je vous propose un
+            accompagnement sur mesure, adapté à votre niveau et à vos objectifs.
+            Grâce à une approche individualisée, nous construisons ensemble un
+            programme efficace, durable et motivant. Trois formules spécifiques
+            sont disponibles pour répondre à tous les profils : remise en forme,
+            santé, ou performance de haut niveau.
           </p>
-          <p>Ma méthode est axée sur :</p>
-          <ul class="article__wrapper__list">
-            <li><strong>L’optimisation des performances</strong></li>
-            <li><strong>La prévention des blessures</strong></li>
-            <li>
-              <strong>Le rétablissement rapide et complet</strong> grâce à des
-              techniques ostéopathiques spécialisées
-            </li>
-          </ul>
         </article>
-
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">Approche Holistique</h2>
-          <p class="article__wrapper__text">
-            Je combine mes compétences pour offrir une
-            <strong>prise en charge globale et personnalisée</strong>. J'utilise
-            des <strong>techniques manuelles adaptées</strong> pour :
-          </p>
-          <ul class="article__wrapper__list">
-            <li><strong>Restaurer la mobilité des tissus</strong></li>
-            <li><strong>Améliorer la posture</strong></li>
-            <li>
-              <strong>Soulager durablement les douleurs</strong> grâce à des
-              techniques ostéopathiques spécialisées
-            </li>
-          </ul>
-        </article>
-
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">
-            Collaboration avec des Clubs Sportifs
+        <div class="comfort mw-container">
+          <h2 class="comfort__title">
+            Choisissez l’Accompagnement Qui Vous Ressemble
           </h2>
-          <div class="collab-club mw-container">
-            <div class="tooltip-container">
-              <img
-                src="./assets/images/clubs/logo-tremblay.png"
-                alt="Handball Tremblay"
-              />
-              <div class="tooltip">Handball Tremblay</div>
+          <div class="osteo__all">
+            <div class="card">
+              <img src="./assets/images/sport-standard.jpg" alt="" srcset="" />
+              <div class="card__content">
+                <h3 class="card__title">Standard</h3>
+                <p>
+                  Idéal pour toute personne souhaitant reprendre une activité
+                  physique ou maintenir sa forme.
+                </p>
+                <ul class="card__list">
+                  <li><strong>Perte de poids</strong> durable et saine</li>
+                  <li>
+                    <strong>Prise de masse</strong> musculaire progressive
+                  </li>
+                  <li>
+                    Amélioration de la
+                    <strong>condition physique</strong> générale
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="tooltip-container">
-              <img
-                src="./assets/images/clubs/logo-mlv.png"
-                alt="Basketball Marne la Vallée"
-              />
-              <div class="tooltip">Basketball Marne la Vallée</div>
+            <div class="card">
+              <img src="./assets/images/sport-santé.webp" alt="" srcset="" />
+              <div class="card__content">
+                <h3 class="card__title">Sport Santé</h3>
+                <p>
+                  Conçu pour les personnes ayant des besoins spécifiques liés à
+                  la santé ou à la prévention des douleurs.
+                </p>
+                <ul class="card__list">
+                  <li>
+                    <strong>Activité adaptée</strong> aux pathologies légères
+                  </li>
+                  <li>
+                    <strong>Réduction des douleurs</strong> articulaires et
+                    musculaires
+                  </li>
+                  <li><strong>Bilan ostéo</strong> en complément du suivi</li>
+                </ul>
+              </div>
             </div>
-            <div class="tooltip-container">
-              <img
-                src="./assets/images/clubs/logo-torcy.png"
-                alt="Football Torcy"
-              />
-              <div class="tooltip">Football Torcy</div>
-            </div>
-            <div class="tooltip-container">
-              <img src="./assets/images/clubs/logo-insep.png" alt="INSEP" />
-              <div class="tooltip">INSEP</div>
-            </div>
-            <div class="tooltip-container">
-              <img
-                src="./assets/images/clubs/logo-jsa.png"
-                alt="Basketball JSA Bordeaux"
-              />
-              <div class="tooltip">Basketball JSA Bordeaux</div>
-            </div>
-            <div class="tooltip-container">
-              <img
-                src="./assets/images/clubs/logo-cdhn.png"
-                alt="Centre de Développement Haut Niveau"
-              />
-              <div class="tooltip">Centre de Développement Haut Niveau</div>
+            <div class="card">
+              <img src="./assets/images/sport-HN.jpg" alt="" srcset="" />
+              <div class="card__content">
+                <h3 class="card__title">Sportif Haut Niveau</h3>
+                <p>
+                  Destiné aux athlètes ou pratiquants expérimentés en quête de
+                  performance optimale.
+                </p>
+                <ul class="card__list">
+                  <li><strong>Optimisation</strong> des qualités physiques</li>
+                  <li><strong>Préparation</strong> aux compétitions</li>
+                  <li>
+                    <strong>Prévention</strong> des blessures et récupération
+                    ciblée
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </article>
-      </div>
-      <!-- <div class="glide">
-        <div class="glide__track" data-glide-el="track">
-          <ul class="glide__slides">
-            <li class="glide__slide">
-              <img
-                src="./assets/images/carousel/20200629_222152000_iOS.jpg"
-                alt="Photo 1"
-              />
+        </div>
+        <article class="article__wrapper mw-container">
+          <h2 class="article__wrapper__title">Suivi Nutritionnel Inclus</h2>
+          <p class="article__intro">
+            Quel que soit le programme choisi, un
+            <strong>accompagnement alimentaire personnalisé</strong> est intégré
+            pour garantir des résultats durables.
+          </p>
+          <ul>
+            <li>
+              <strong>Conseils adaptés</strong> à votre profil : prise en compte
+              de vos habitudes, préférences et éventuelles restrictions
+              alimentaires.
             </li>
-            <li class="glide__slide">
-              <img
-                src="./assets/images/carousel/20211021_140926000_iOS.jpg"
-                alt="Photo 3"
-              />
+            <li>
+              <strong>Ajustement précis</strong> selon vos objectifs : perte de
+              poids, prise de masse, maintien ou optimisation de la performance.
             </li>
-            <li class="glide__slide">
-              <img src="./assets/images/carousel/GFNC8774.JPG" alt="Photo 4" />
+            <li>
+              Prise en compte de votre <strong>métabolisme</strong> pour des
+              recommandations réalistes et efficaces.
             </li>
-            <li class="glide__slide">
-              <img
-                src="./assets/images/carousel/TFHB-PCHB-6914.jpg"
-                alt="Photo 4"
-              />
+            <li>
+              <strong>Flexibilité au quotidien</strong> : conseils compatibles
+              avec votre rythme de vie, votre travail, vos contraintes
+              familiales et sociales.
             </li>
-            <li class="glide__slide">
-              <img
-                src="./assets/images/carousel/TFHB-PCHB-6988.jpg"
-                alt="Photo 4"
-              />
-            </li>
-            <li class="glide__slide">
-              <img src="./assets/images/carousel/IMG_1053.JPG" alt="Photo 4" />
+            <li>
+              <strong>Éducation alimentaire progressive</strong>, pour adopter
+              des habitudes saines et pérennes.
             </li>
           </ul>
-        </div>
-      </div> -->
+        </article>
+
+        <article class="article__wrapper mw-container">
+          <h2 class="article__wrapper__title">Tarifs</h2>
+          <p class="article__intro">
+            Les séances de préparation physique débutent à partir de
+            <strong>70 €</strong>. Ce tarif correspond à une
+            <strong>séance individuelle standard</strong>.
+          </p>
+          <p>
+            Le prix peut évoluer selon plusieurs critères, pour un
+            accompagnement parfaitement adapté à vos besoins :
+          </p>
+          <ul>
+            <li>
+              <strong>Localisation</strong> : séances à domicile, en salle
+              partenaire ou en extérieur — chaque lieu peut influencer le tarif
+              selon les frais et déplacements.
+            </li>
+            <li>
+              <strong>Durée de la séance</strong> : courtes ou prolongées, selon
+              vos disponibilités et objectifs spécifiques.
+            </li>
+            <li>
+              <strong>Fréquence du suivi</strong> : forfaits personnalisés
+              possibles pour un suivi régulier, avec un meilleur rapport
+              qualité-prix.
+            </li>
+            <li>
+              <strong>Objectifs fixés</strong> : la complexité du programme peut
+              influer sur le coût, notamment pour la préparation sportive de
+              haut niveau ou les suivis santé spécifiques.
+            </li>
+          </ul>
+        </article>
+      </section>
 
       <section class="banner">
         <img
